# cnc-tool-converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: release.yml  wiki.yml
Example Tool Files/Fusion 360/: Fusion 360 Tool Export.hsmlib  Fusion Tool Libary.json
Example Tool Files/InventorCAM/: 000 Utility.hsmlib  300 3F Wood.hsmlib  500 Chamfer Bits.hsmlib  900 Engraving & Cutting.hsmlib
Example Tool Files/RhinoCAM/: RhinoCAM_CSV.csv
cli/: cnc-convert.ts  tsconfig.json
docs/: adding-a-converter.md
e2e/: app.spec.ts  converter.spec.ts  helpers.ts  library.spec.ts  screenshots.spec.ts  settings.spec.ts
e2e/fixtures/: sample-library.json
scripts/: take-screenshots.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: cli.rs  lib.rs  main.rs
src/components/: ChangelogModal.tsx  ConversionOutput.tsx  FileDropZone.tsx  (+4 more)
wiki/: Bulk-Operations.md  Editing-Tools.md  Exporting-Tools.md  Format-Converter.md  Getting-Started.md  Home.md  Importing-Tools.md  Inventory-and-Stock.md  Keyboard-Shortcuts.md  Materials-and-Holders.md  Printing-and-Labels.md  Remote-Sync.md  Settings.md  Snapshots-and-Backup.md  Speeds-and-Feeds.md  Supported-Formats.md  Tool-Library.md  _Sidebar.md
(+126 files in other folders)
